src/objects/P7S1_Comp__c.object
<CustomObject>
    <description>Firmen des P7S1-Konzerns
diesen Firmen werden Mitarbeiter zugeordnet.
inklusive externen Partnern/Lieferanten, die Mitarbeiter/User bereit stellen</description>
    <fields>
        <fullName>P7S1_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>zugeordneter Account</description>
        <inlineHelpText>zugeordneter Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>P7S1 Firmen</relationshipLabel>
        <relationshipName>P7S1_Firmen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_CompNo__c</fullName>
        <description>Accountnummer, wird vor allem für DWH-SST benötigt</description>
        <formula>P7S1_Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Accountnummer, wird vor allem für DWH-SST benötigt</inlineHelpText>
        <label>Accountnummer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_EmpCountActive__c</fullName>
        <description>Anzahl aktiver Mitarbeiter</description>
        <inlineHelpText>Anzahl aktiver Mitarbeiter</inlineHelpText>
        <label>Anzahl Mitarbeiter aktiv</label>
        <summaryFilterItems>
            <field>P7S1_Emp__c.P7S1_IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>P7S1_Emp__c.P7S1_Comp__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>P7S1_EmpCount__c</fullName>
        <label>Anzahl Mitarbeiter</label>
        <summaryForeignKey>P7S1_Emp__c.P7S1_Comp__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>P7S1_Konzernmitglied__c</fullName>
        <formula>P7S1_Account__r.P7S1_Konzernmitglied__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P7S1-Konzernmitglied</label>
        <type>Checkbox</type>
    </fields>
    <label>P7S1 Firma</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Konzernmitglied__c</columns>
        <columns>P7S1_Account__c</columns>
        <columns>P7S1_EmpCount__c</columns>
        <columns>P7S1_EmpCountActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>P7S1_Konzernmitglieder</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Konzernmitglied__c</columns>
        <columns>P7S1_Account__c</columns>
        <columns>P7S1_EmpCount__c</columns>
        <columns>P7S1_EmpCountActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Konzernmitglied__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>P7S1 Konzernmitglieder</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Firmenname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>P7S1 Firmen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>